# TetrisAIrs

./: Cargo.toml  crossbuild.bat  run debug.bat
src/: beemsearch.rs  consttable.rs  draw.rs  environment.rs  evaluation.rs  geneticalgorithm.rs  grobaldata.rs  main.rs  mino.rs  search.rs  threadpool.rs
