[package]
name = "TetrisAIrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
num = "*"
rand = "0.8.5"
crossterm_cursor = "0.4.0"
console = "0.15.0"
# winconsole = "0.11.1"
rawkey = "*"


[dependencies.winconsole]
version = "0.11.1"
features = ["input", "serde", "window"]