[package]
name = "TetrisAIrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
num = "*"
rand = "0.8.5"
crossterm = "*"
num_cpus="*"
thread-id = "*"
once_cell = "*"
libm = "*"

[profile.release]
debug = true